--- a/01_Linux_1/LNX010.md
+++ b/01_Linux_1/LNX010.md
@@ -23,25 +23,23 @@ Start met scripting in BASH.
 
 - Create a script that installs the httpd package, activates httpd, and enables httpd. Finally, your script should print the status of httpd in the terminal.
 
-
-
-
-Variables:
-
-You can assign a value to a string of characters so that the value can be read somewhere else in the script.
-Assigning a variable is done using ‘=’.
-Reading the value of a variable is done using ‘$<insert variable name here>’.
-
+![screenshot Desktop](../00_includes/LNX/LNX010_6.png)
+![screenshot Desktop](../00_includes/LNX/LNX010_7.png)
 
 ### Gebruikte bronnen
 
 <https://www.howtogeek.com/658904/how-to-add-a-directory-to-your-path-in-linux/>
 
+<https://askubuntu.com/questions/409025/permission-denied-when-running-sh-scripts>
+
+<https://linuxhint.com/bash_append_line_to_file/>
+
+<https://www.digitalocean.com/community/tutorials/how-to-install-the-apache-web-server-on-ubuntu-20-04>
 
 
 ### Ervaren problemen
 
-SSH status report bleef continue updaten zodat ik geen prompt meer kreeg. CTRL-Q en CTRL-X geen effect. Opgezocht hoe dit te stoppen. Antwoord "q".
+Geen echte obstakels.
 
 ### Resultaat
 
