--- a/01_Linux_1/LNX010.md
+++ b/01_Linux_1/LNX010.md
@@ -25,6 +25,21 @@ Start met scripting in BASH.
 ![screenshot Desktop](../00_includes/LNX/LNX010_6.png)
 ![screenshot Desktop](../00_includes/LNX/LNX010_7.png)
 
+## Opdracht 2
+
+- Create a script that generates a random number between 1 and 10, stores it in a variable, and then appends the number to a text file.
+
+![screenshot Desktop](../00_includes/LNX/LNX010_8.png)
+![screenshot Desktop](../00_includes/LNX/LNX010_9.png)
+
+## Opdracht 3
+
+- Create a script that generates a random number between 1 and 10, stores it in a variable, and then appends the number to a text file only if the number is bigger than 5. If the number is 5 or smaller, it should append a line of text to that same text file instead.
+
+![screenshot Desktop](../00_includes/LNX/LNX010_10.png)
+![screenshot Desktop](../00_includes/LNX/LNX010_11.png)
+![screenshot Desktop](../00_includes/LNX/LNX010_12.png)
+
 ### Gebruikte bronnen
 
 <https://www.howtogeek.com/658904/how-to-add-a-directory-to-your-path-in-linux/>
@@ -36,6 +51,12 @@ Start met scripting in BASH.
 <https://www.digitalocean.com/community/tutorials/how-to-install-the-apache-web-server-on-ubuntu-20-04>
 
 <https://stackoverflow.com/questions/7642674/how-do-i-script-a-yes-response-for-installing-programs>
+
+<https://www.baeldung.com/linux/random-numbers>
+
+<https://linuxize.com/post/how-to-copy-files-and-directories-in-linux/>
+
+<https://tldp.org/LDP/abs/html/comparison-ops.html>
 
 ### Ervaren problemen
 
