--- a/01_Linux_1/LNX010.md
+++ b/01_Linux_1/LNX010.md
@@ -60,7 +60,7 @@ Start met scripting in BASH.
 
 ### Ervaren problemen
 
-Geen echte obstakels.
+Even moeten uitzoeken wat de comparison syntax was in BASH. Syntax is uiteraard anders dan ik gewend ben, maar de structuur is duidelijk. Omdat ik de volgende dag verder ben gegaan met deze opdracht, werkte mijn scripts niet meer vanwege $PATH. Als ik tijd over heb, zal ik deze in mijn profile toevoegen zodat dit geen issue meer is.
 
 ### Resultaat
 
