--- a/Project/Timelogs/09-02.md
+++ b/Project/Timelogs/09-02.md
@@ -10,7 +10,7 @@ Alles vrij nieuw. Geen idee waar te beginnen
 
 ## Oplossingen
  
-Planning/Structuur maken 
+Planning/Structuur maken. Jira opgezet.
 
 ## Learnings
  
