--- a/Project/Timelogs/10-02.md
+++ b/Project/Timelogs/10-02.md
@@ -2,15 +2,15 @@
 
 ## Dagverslag
  
-Verder gelezen in de gegeven opdracht en belangrijkste informatie gedistilleerd. Bicep file aangemaakt.
+Verder gelezen in de gegeven opdracht en belangrijkste informatie gedistilleerd en verwerkt in eisen.md. Bicep file aangemaakt. Enkele bicep tutorials gedaan.
 
 ## Obstakels
  
-
+Leren met bicep om te gaan
 
 ## Oplossingen
  
-
+Tutorials
 
 ## Learnings
  
