--- a/07_Project/Timelogs/14-02.md
+++ b/07_Project/Timelogs/14-02.md
@@ -2,15 +2,15 @@
 
 ## Dagverslag
  
-Verder gegaan met bicep tutorials om efficient te leren deployen.
+Project beschrijving nogmaals gedistilleerd en 'unknowns' vertaald in vragen voor de stakeholder.
 
 ## Obstakels
  
-Leren met bicep om te gaan
+Niet alle informatie voorhanden.
 
 ## Oplossingen
  
-Tutorials
+Meeting met stakeholder.
 
 ## Learnings
  
